--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^6.0.6",
     "firebase": "^9.13.0",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3"
   }
 }
